from enum import Enum

class FieldDataTypes(Enum):
    STRING = 1
    INTEGER = 2
    DECIMAL = 3
    BOOLEAN = 4
    BINARY = 5
    TIME = 6
    DATE = 7
    DATETIME = 8
